tdrc/gen/scanner_l.c
/* Generated by re2c 1.0.1 on Tue Feb 23 17:14:56 2021 */
#line 1 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
#include "tdr_platform.h"
#include "parse/scanner.h"

#include "globals.h"
#include "scanner_l.h"
#include "parser_y.h"
int32_t scanner_scan(scanner_t *self, YYLTYPE *yylloc)
{
restart:
	if(YYCURSOR >= YYLIMIT)
	{
		return 0;
	}
	yylloc->first_line = scanner_top(self)->yylineno;
	yylloc->first_column = scanner_top(self)->yycolumn;
	g_yyloc = *yylloc;

	yytext = YYCURSOR;

#line 23 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	switch (YYGETCONDITION()) {
	case yycINITIAL: goto yyc_INITIAL;
	}
/* *********************************** */
yyc_INITIAL:
	YYFILL(14);
	yych = *YYCURSOR;
	switch (yych) {
	case '!':	goto yy5;
	case '"':	goto yy7;
	case '#':	goto yy9;
	case '&':
	case '(':
	case ')':
	case ',':
	case ':':
	case ';':
	case '<':
	case '>':
	case '{':
	case '}':	goto yy11;
	case '\'':	goto yy12;
	case '+':
	case '-':	goto yy14;
	case '.':	goto yy15;
	case '/':	goto yy16;
	case '0':	goto yy17;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy19;
	case '=':	goto yy21;
	case 'A':
	case 'C':
	case 'D':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'h':
	case 'j':
	case 'k':
	case 'q':
	case 'z':	goto yy22;
	case 'B':	goto yy25;
	case 'E':	goto yy26;
	case '_':	goto yy27;
	case 'a':	goto yy28;
	case 'b':	goto yy29;
	case 'c':	goto yy30;
	case 'd':	goto yy31;
	case 'e':	goto yy32;
	case 'f':	goto yy33;
	case 'g':	goto yy34;
	case 'i':	goto yy35;
	case 'l':	goto yy36;
	case 'm':	goto yy37;
	case 'n':	goto yy38;
	case 'o':	goto yy39;
	case 'p':	goto yy40;
	case 'r':	goto yy41;
	case 's':	goto yy42;
	case 't':	goto yy43;
	case 'u':	goto yy44;
	case 'v':	goto yy45;
	case 'w':	goto yy46;
	case 'x':	goto yy47;
	case 'y':	goto yy48;
	default:	goto yy3;
	}
yy3:
	++YYCURSOR;
yy4:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 202 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{ goto restart;					 }
#line 125 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy5:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy49;
	default:	goto yy6;
	}
yy6:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 47 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return yytext[0];																}
#line 136 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy7:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 71 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_string;																}
#line 142 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy9:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy51;
	default:	goto yy9;
	}
yy11:
	++YYCURSOR;
	goto yy6;
yy12:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 72 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_char;																}
#line 159 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy53;
	default:	goto yy4;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy55;
	default:	goto yy4;
	}
yy16:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '*':	goto yy58;
	case '/':	goto yy59;
	default:	goto yy4;
	}
yy17:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'x':	goto yy63;
	default:	goto yy20;
	}
yy18:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 75 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_int;																}
#line 209 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy19:
	yyaccept = 1;
	YYMARKER = ++YYCURSOR;
	YYFILL(3);
	yych = *YYCURSOR;
yy20:
	switch (yych) {
	case '.':	goto yy55;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy19;
	case 'E':
	case 'e':	goto yy61;
	default:	goto yy18;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy64;
	default:	goto yy6;
	}
yy22:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
yy23:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy22;
	default:	goto yy24;
	}
yy24:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 200 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_identifier;															}
#line 313 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy66;
	default:	goto yy23;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy67;
	default:	goto yy23;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy68;
	default:	goto yy23;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'b':	goto yy69;
	case 'l':	goto yy70;
	case 'n':	goto yy71;
	case 'r':	goto yy72;
	case 's':	goto yy73;
	default:	goto yy23;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy75;
	case 'i':	goto yy76;
	case 'o':	goto yy77;
	case 'r':	goto yy78;
	case 'y':	goto yy79;
	default:	goto yy23;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy80;
	case 'h':	goto yy81;
	case 'l':	goto yy82;
	case 'o':	goto yy83;
	default:	goto yy23;
	}
yy31:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy84;
	case 'o':	goto yy85;
	case 'y':	goto yy87;
	default:	goto yy23;
	}
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy88;
	case 'n':	goto yy89;
	case 'x':	goto yy90;
	default:	goto yy23;
	}
yy33:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy91;
	case 'i':	goto yy92;
	case 'l':	goto yy93;
	case 'o':	goto yy94;
	case 'u':	goto yy95;
	default:	goto yy23;
	}
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy96;
	case 'o':	goto yy97;
	default:	goto yy23;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'f':	goto yy98;
	case 'm':	goto yy100;
	case 'n':	goto yy101;
	case 's':	goto yy103;
	default:	goto yy23;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy105;
	case 'i':	goto yy106;
	default:	goto yy23;
	}
yy37:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy107;
	default:	goto yy23;
	}
yy38:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy108;
	case 'e':	goto yy109;
	case 'i':	goto yy110;
	case 'o':	goto yy111;
	default:	goto yy23;
	}
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'p':	goto yy112;
	case 'r':	goto yy113;
	default:	goto yy23;
	}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy115;
	case 'r':	goto yy116;
	case 'u':	goto yy117;
	default:	goto yy23;
	}
yy41:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy118;
	case 'e':	goto yy119;
	default:	goto yy23;
	}
yy42:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy120;
	case 'i':	goto yy121;
	case 't':	goto yy122;
	case 'u':	goto yy123;
	case 'w':	goto yy124;
	case 'y':	goto yy125;
	default:	goto yy23;
	}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy126;
	case 'r':	goto yy127;
	case 'y':	goto yy128;
	default:	goto yy23;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy129;
	case 'n':	goto yy130;
	case 's':	goto yy131;
	default:	goto yy23;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy132;
	case 'e':	goto yy133;
	case 'i':	goto yy134;
	case 'o':	goto yy135;
	default:	goto yy23;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'h':	goto yy136;
	case 'i':	goto yy137;
	default:	goto yy23;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy138;
	default:	goto yy23;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy139;
	default:	goto yy23;
	}
yy49:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 68 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_unequal;															}
#line 507 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy51:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 70 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_unixcomment;														}
#line 513 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy53:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy53;
	default:	goto yy18;
	}
yy55:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	YYFILL(3);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy55;
	case 'E':
	case 'e':	goto yy61;
	default:	goto yy57;
	}
yy57:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 73 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_double;																}
#line 555 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case '*':	goto yy142;
	default:	goto yy140;
	}
yy59:
	++YYCURSOR;
	YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy144;
	default:	goto yy59;
	}
yy61:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '-':	goto yy146;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy147;
	default:	goto yy62;
	}
yy62:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy4;
	case 1: 	goto yy18;
	case 2: 	goto yy57;
	default:	goto yy403;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy149;
	default:	goto yy62;
	}
yy64:
	++YYCURSOR;
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 67 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{return tok_equal;																}
#line 627 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':	goto yy152;
	default:	goto yy23;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy153;
	default:	goto yy23;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy155;
	case 'D':	goto yy156;
	case 'F':	goto yy157;
	case 'L':	goto yy158;
	case 'M':	goto yy159;
	case 'N':	goto yy160;
	default:	goto yy23;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy161;
	default:	goto yy23;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy162;
	default:	goto yy23;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy163;
	default:	goto yy23;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy165;
	default:	goto yy23;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'z':	goto yy22;
	case 's':	goto yy166;
	case 'y':	goto yy167;
	default:	goto yy74;
	}
yy74:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 92 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 747 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'g':	goto yy168;
	default:	goto yy23;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy169;
	default:	goto yy23;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy170;
	default:	goto yy23;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy171;
	default:	goto yy23;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy172;
	default:	goto yy23;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy173;
	case 't':	goto yy174;
	default:	goto yy23;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy175;
	default:	goto yy23;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy176;
	case 'o':	goto yy177;
	default:	goto yy23;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy178;
	case 'u':	goto yy179;
	default:	goto yy23;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy180;
	case 'f':	goto yy181;
	case 'l':	goto yy183;
	default:	goto yy23;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy22;
	case 'u':	goto yy185;
	default:	goto yy86;
	}
yy86:
	yyleng = YYCURSOR - yytext; scanner_locate(self);
#line 105 "/home/merlin/workspace/TDR-Merlin/tdrc/scanner_l.re"
	{ return tok_reserved_keyword; }
#line 885 "/home/merlin/workspace/TDR-Merlin/tdrc/gen/scanner_l.c"
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy186;
	default:	goto yy23;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'i':	goto yy187;
	case 's':	goto yy188;
	default:	goto yy23;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'd':	goto yy189;
	case 's':	goto yy191;
	case 'u':	goto yy192;
	default:	goto yy23;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy193;
	case 'e':	goto yy194;
	case 't':	goto yy195;
	default:	goto yy23;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'l':	goto yy196;
	default:	goto yy23;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy197;
	default:	goto yy23;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy198;
	default:	goto yy23;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy199;
	default:	goto yy23;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy201;
	default:	goto yy23;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy202;
	default:	goto yy23;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy203;
	default:	goto yy23;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
